Criação de testes usando Mockito e alguns ajustes