@@ -5,10 +5,15 @@ import com.example.projecttasker.core.application.dtos.taskdtos.TaskSummaryDTO;
 import com.example.projecttasker.core.application.dtos.userdtos.UserMapper;
 import com.example.projecttasker.core.domain.projectmanagement.Project;
 
-import java.util.stream.Collectors;
+import java.util.List;
 
 public class ProjectMapper {
     public static ProjectResponseDTO toDTO(Project project){
-        return new ProjectResponseDTO(project.getId(),project.getNomeProjeto(), UserMapper.toDTO(project.getUser()),project.getProjectStatus(),project.getBudget(),project.getCreatedAt(), project.getTasks().stream().map(TaskMapper::toDTO).collect(Collectors.toList()));
+        List<TaskSummaryDTO> tasks = project.getTasks() == null
+                ? List.of()
+                : project.getTasks().stream().map(TaskMapper::toDTO).toList();
+
+        return new ProjectResponseDTO(project.getId(), project.getNomeProjeto(), UserMapper.toDTO(project.getUser()),
+                project.getProjectStatus(), project.getBudget(), project.getCreatedAt(), tasks);
     }
 }
